[project]
name = "comfyui-ella-wrapper"
description = "ComfyUI wrapper nodes to use the Diffusers implementation of ELLA"
version = "1.0.0"
license = "LICENSE"
dependencies = ["diffusers>=0.26.0", "accelerate", "omegaconf", "sentencepiece"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-ELLA-wrapper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ELLA-wrapper"
Icon = ""
